--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -17,6 +17,7 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+	margin-bottom: 25px;
 	.filterbutton__circleicon {
 		font-size: $font-size-S;
 		position: relative;
