--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,24 +1,25 @@
 footer {
-  background-color: $background-alt-2;
-  color: $font-color-1;
-  padding: 20px 15px;
+	background-color: $background-alt-2;
+	color: $font-color-1;
+	padding: 20px 15px;
 }
 
 .footer__title {
-  margin: 0px;
-  padding-bottom: 10px;
+	margin: 0px;
+	padding-top: 5px;
+	padding-bottom: 10px;
 }
 
 .footer__list {
-  list-style-type: none;
-  padding: 0px;
-  margin: 0px;
-  &-subelement {
-    padding-top: 10px;
-    &--icon {
-      font-size: $font-size-S;
-      width: 30px;
-      padding-right: 15px;
-    }
-  }
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+	&-subelement {
+		padding-top: 8px;
+		&--icon {
+			font-size: $font-size-S;
+			width: 30px;
+			padding-right: 15px;
+		}
+	}
 }
