--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,12 +1,13 @@
 .header {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 60px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
 .header__logo {
-  display: block;
-  margin: auto;
-  width: 50%;
-  height: 50%;
-  padding: 20px 0px;
+	width: 50%;
+	height: 50%;
 }
