--- a/sass/layout/searchbar.scss
+++ b/sass/layout/searchbar.scss
@@ -1,17 +1,28 @@
 .form {
-  text-align: center;
-  &__searchfield-icon {
-    padding-top: 5px;
-  }
-  &__searchfield-text {
-    background: $background-alt-4;
-    border: 0px;
-    padding-top: 10px;
-    &::placeholder {
-      width: fit-content;
-      color: $font-color-2;
-      font-weight: $font-weight-large;
-      padding-left: 25px;
-    }
-  }
+	text-align: center;
+	&__searchfield-icon {
+		padding-top: 15px;
+	}
+	&__searchfield-text {
+		background: $background-alt-4;
+		border: 0px;
+		padding-top: 10px;
+		&::placeholder {
+			width: fit-content;
+			color: $font-color-2;
+			font-weight: $font-weight-large;
+			padding-left: 25px;
+		}
+	}
+}
+
+.form__resultspresentation {
+	padding-top: 55px;
+	.form__first-slogan {
+		margin: 0px;
+	}
+	.form__second-slogan {
+		margin: 0px;
+		padding: 12px 0px 30px 0px;
+	}
 }
