--- a/sass/pages/accueil.scss
+++ b/sass/pages/accueil.scss
@@ -1,36 +1,39 @@
 .form {
-  width: 100%;
-  height: 350px;
-  background: linear-gradient(
-    to top,
-    $background-alt-3 0% 90%,
-    $background-alt-4 90% 100%
-  );
-  border-top: 2px solid $background-alt-4;
+	width: 100%;
+	height: 337px;
+	background: linear-gradient(
+		to top,
+		$background-alt-3 0% 86%,
+		$background-alt-4 86% 100%
+	);
+	border-top: 2px solid $background-alt-4;
 }
 
 ::placeholder {
-  background: $background-alt-4;
-  border: 0px solid $background-alt-4;
+	background: $background-alt-4;
+	border: 0px solid $background-alt-4;
 }
 
 .filters {
-  width: 100%;
-  height: 450px;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+	width: 100%;
+	height: 440px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .filters__title {
-  margin: 0%;
-  align-self: flex-start;
+	margin: 0%;
+	align-self: flex-start;
+	padding: 50px 0px 25px 15px;
 }
 
 .cards {
-  background-color: $background-alt-3;
-  padding: 15px;
+	background-color: $background-alt-3;
+	padding: 15px 15px 45px 15px;
 }
-/* Mon commentaire de test */
+.cards__title {
+	padding-top: 40px;
+	padding-bottom: 22px;
+	margin: 0px;
+}
