--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import "./base/normalize";
 @import "./base/typography";
+@import "./base/animations";
 @import "./pages/accueil";
 @import "./layout/header";
 @import "./layout/searchbar";
@@ -8,20 +9,20 @@
 @import "./components/cards";
 
 html {
-  max-width: 375px;
-  box-sizing: border-box;
+	max-width: 375px;
+	box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 @media all and (min-width: 375px) {
-  html {
-    max-width: 375px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+	html {
+		max-width: 375px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
